--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-black==22.12.0
-circuitpython-stubs==7.3.3
+adafruit_bitmap_font==1.5.11
+adafruit_datetime==1.2.3
+adafruit_display_text==2.23.0
+adafruit_displayio_sh1106==1.2.10
+adafruit_ticks==1.0.9
+asyncio==0.5.19
